--- a/SalesWebMvc/Views/Home/About.cshtml
+++ b/SalesWebMvc/Views/Home/About.cshtml
@@ -1,4 +1,4 @@
-﻿@{
+﻿@{ // pode aplicar código c# nesse campo @{}
     ViewData["Title"] = "About";
 }
 
@@ -10,6 +10,7 @@
 
 <p>Aluno: @ViewData["Aluno"]</p>
 <p>Professor: @ViewData["Professor"]</p>
+<p>Email: @ViewData["Email"]</p>
 
 <address>
     <strong>More information: </strong><a href="https://github.com/josenoe97/SalesWebMvc">GitHub</a>
