--- a/SalesWebMvc/Views/SalesRecords/GroupingSearch.cshtml
+++ b/SalesWebMvc/Views/SalesRecords/GroupingSearch.cshtml
@@ -1,7 +1,7 @@
 ﻿
 @{
-    ViewData["Title"] = "GroupingSearch";
+    ViewData["Title"] = "Grouping Search";
 }
 
-<h1>GroupingSearch</h1>
+<h1>@ViewData["Title"]</h1>
 
